--- a/src/Containers/ChartsConfig/components/styles/ChartsTabs.module.scss
+++ b/src/Containers/ChartsConfig/components/styles/ChartsTabs.module.scss
@@ -1,15 +1,20 @@
-@use '../../../../mixins.scss' as mixin;
+@use '../../../../mixins.module.scss' as mixin;
+
 .tab {
     background-color: inherit;
     font-family: inherit;
     white-space: nowrap;
     border-radius: 8px 8px 0 0;
     padding: 4px 8px;
+    font-size: 1.4em;
 
     &.selected {
         border-bottom: 0;
         font-weight: 600;
     }
+
+    display: flex;
+    align-items: center;
 }
 
 .container {
