--- a/src/Containers/ChartsConfig/components/styles/ChartsTabs.module.scss
+++ b/src/Containers/ChartsConfig/components/styles/ChartsTabs.module.scss
@@ -4,17 +4,22 @@
     background-color: inherit;
     font-family: inherit;
     white-space: nowrap;
+    border: 1px solid black;
     border-radius: 8px 8px 0 0;
     padding: 4px 8px;
     font-size: 1.4em;
+    display: flex;
+    align-items: center;
+    gap: 4px;
 
     &.selected {
         border-bottom: 0;
         font-weight: 600;
     }
 
-    display: flex;
-    align-items: center;
+    > input {
+        font-size: 1.1em;
+    }
 }
 
 .container {
